# cpp-fsm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  doors.cpp  player.cpp
include/: cpp_fsm.hpp
